--- a/.github/workflows/deploy-to-uat.yml
+++ b/.github/workflows/deploy-to-uat.yml
@@ -1,9 +1,9 @@
 name: deploy
 on:
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    branches: [master]
+  # pull_request:
+  #   branches: [master]
 
 jobs:
   build-and-push:
